--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,14 @@ gevent = [
     { version = "20.12.1", markers = "platform_machine == 'x86_64'" },
     { git = "https://github.com/gevent/gevent.git", tag = "20.12.1", markers = "platform_machine != 'x86_64'" }
 ]
+pymodbus = "^2.4.0"
+influxdb = "^5.3.1"
+influxdb-client = "^1.13.0"
+schedule = "^0.6.0"
+psycopg2-binary = "^2.8.6"
 rubix-http = { git = "https://github.com/NubeIO/rubix-http", rev = "v1.0.2" }
+rubix-registry = { git = "https://github.com/NubeIO/rubix-registry", rev = "v1.0.0" }
+mqtt-rest-bridge = { git = "https://github.com/NubeIO/mqtt-rest-bridge", rev = "v1.1.4" }
 
 [tool.poetry.dev-dependencies]
 pyinstaller = "^4.1"
